# mc656

./: .gitignore  README.md  app.py  ci-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
country_game/: country_chooser.py
requirements/: REQUIREMENTS.md
scripts/: __init__.py  blur_image.py  country_chooser.py  country_data_functions.py  country_data_manager.py  distance_calculator.py  game_logic.py
static/: countries.csv  countries_position.csv  index_style.css
templates/: about.html  index.html
tests/: test_blur_image.py  test_country_chooser.py  test_country_data_manager.py  test_distance_calculator.py
